[workspace]
members = [
    "book/tests",
    "examples",
    "twilight",
    "twilight-cache-inmemory",
    "twilight-gateway",
    "twilight-gateway-queue",
    "twilight-http",
    "twilight-http-ratelimiting",
    "twilight-lavalink",
    "twilight-mention",
    "twilight-model",
    "twilight-standby",
    "twilight-util",
    "twilight-validate",
]
resolver = "2"

[workspace.package]
authors = ["Twilight Contributors"]
edition = "2021"
include = ["src/**/*.rs", "README.md"]
license = "ISC"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.64"

[workspace.dependencies]
twilight = {path = "twilight"}
twilight-cache-inmemory = {path = "twilight-cache-inmemory"}
twilight-gateway = {path = "twilight-gateway"}
twilight-gateway-queue = {path = "twilight-gateway-queue"}
twilight-http = {path = "twilight-http"}
twilight-http-ratelimiting = {path = "twilight-http-ratelimiting"}
twilight-lavalink = {path = "twilight-lavalink"}
twilight-mention = {path = "twilight-mention"}
twilight-model = {path = "twilight-model"}
twilight-standby = {path = "twilight-standby"}
twilight-util = {path = "twilight-util"}
twilight-validate = {path = "twilight-validate"}