[package]
description = "Discord Gateway connection queue implementation for the Twilight ecosystem."
homepage = "https://twilight.rs/"
keywords = ["discord", "discord-api", "twilight"]
name = "twilight-gateway-queue"
version = "0.15.0"
edition = "2021"

[dependencies]
tokio = { default-features = false, features = ["rt", "sync", "time"], version = "1.0" }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }

# Optional dependencies.
twilight-http = { default-features = false, optional = true, path = "../twilight-http", version = "0.15.0" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }

[features]
default = ["twilight-http"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
