[package]
description = "Utilities for working with mentions in the Twilight ecosystem."
homepage = "https://twilight.rs/chapter_1_crates/section_8_first_party/section_2_mention.html"
keywords = ["twilight"]
name = "twilight-mention"
version = "0.15.0"
edition = "2021"

[dependencies]
twilight-model = { default-features = false, path = "../twilight-model", version = "0.15.0" }

[dev-dependencies]
criterion = { default-features = false, version = "0.4" }
static_assertions = { default-features = false, version = "1" }

[[bench]]
name = "fmt"
harness = false
path = "benches/fmt.rs"
