[package]
categories = ["api-bindings"]
description = "Functions and constants for validating request parameters"
homepage = "https://twilight.rs/"
keywords = ["discord", "discord-api", "twilight"]
name = "twilight-validate"
version = "0.15.0"
edition = "2021"


[dependencies]
twilight-model = { default-features = false, path = "../twilight-model", version = "0.15.0" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1.1.0" }
